# pd-wasm4

./: .gitignore  AGENTS.md  CMakeLists.txt  GNUmakefile  LICENSE  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: release-device.yml
Source/: main.lua  pdxinfo
Source/cart/: main.wasm  main.wat
Source/lua/: main.lua
Source/lua/api/: wamr_api.lua
Source/lua/controller/: browser_controller.lua  running_controller.lua
Source/lua/model/: runtime_state.lua
Source/lua/service/: cart_service.lua  runtime_service.lua
Source/lua/view/: browser_view.lua  running_view.lua  ui_theme.lua
docs/: ai-pr-code-reading-guidelines.md  architecture.md  wamr-aot-guide.md  wasm4-runtime-guide.md
scripts/: build_aot.sh  report_pdx_sizes.cmake
src/: host_audio.c  host_audio.h  main.c  platform_internal.h  wamr_bridge.c  wamr_bridge.h  wamr_playdate_platform.c  wamr_playdate_platform.cmake
src/app/: app_lifecycle.c  app_lifecycle.h  lua_bindings.c  lua_bindings.h  runtime_service.c  runtime_service.h
src/backend/: cart_catalog.c  cart_catalog.h  game_backend.c  game_backend.h  host_runtime.c  host_runtime.h  input_mapper.c  input_mapper.h  menu_controller.c  menu_controller.h  persistence.c  persistence.h  render_composer.c  render_composer.h  runtime_session.c  runtime_session.h
